tests/issues/issue-38.f90
!!!!!!!
! issue opened by qcrist on 2018.05.08
!
! ERROR: unknown parse fail (file: ~, char: 36/'$', position: 3:69 [105/140])
!
PROGRAM EX2
100   FORMAT(' ENTER NAME OF OUTPUT VERSION OF ''THERMAL'' TAPE: ',$)
END
